--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -56,3 +56,45 @@ input.attribute-input {
 input.attribute-input[type="number"] {
     text-align: right;
 }
+
+.rolewell {
+    position: relative;
+    padding: 7px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    background-color: #fbfbfb;
+    border: 1px solid #e3e3e3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    float: left;
+    width: 178px;
+}
+
+.rolewell h5 {
+    margin-top: 0;
+}
+
+.rolewell .clan {
+    float: left;
+    width: 48px;
+    height: 48px;
+    margin-right: 7px;
+}
+
+.rolewell .toolbar {
+    position: absolute;
+    top: -1px;
+    right: 7px;
+    width: 12px;
+    z-index: 1000;
+    display: none;
+}
+
+.rolewell .toolbar .btn {
+    padding-left: 2px;
+    padding-right: 2px;
+}
