--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -110,3 +110,37 @@ input.attribute-input[type="number"] {
     padding-left: 2px;
     padding-right: 2px;
 }
+
+.signin-link {
+    background-color: #ffffff;
+    background-image: none;
+    border-color: #ffffff;
+}
+
+.signin-link:hover {
+    background-color: #ffffff;
+    background-image: none;
+}
+
+.google-signin {
+    color: #dd4b39;
+    border: 1px solid #d9d9d9;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    padding: 2px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin-left: 5px;
+    background-color: #ffffff;
+}
+
+.facebook-signin {
+    color: #5b76b3;
+    background-color: #ffffff;
+    /*border: 1px solid #5b76b3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    margin: 2px;*/
+}
