--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -100,15 +100,49 @@ input.attribute-input[type="number"] {
 .rolewell .toolbar {
     position: absolute;
     top: -1px;
-    right: 7px;
-    width: 12px;
+    right: 4px;
+    width: 14px;
     z-index: 1000;
     display: none;
 }
 
 .rolewell .toolbar .btn {
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
+.rolewell .ghoul {
+    position: absolute;
+    background: url("../logo/ghoul-thumb.png") no-repeat;
+    top: -1px;
+    left: 4px;
+    width: 12px;
+    height: 23px;
+    z-index: 900;
+}
+
+.rolewell .npc:after {
+    content: "NPC";
+    position: absolute;
+    bottom: -1px;
+    left: -1px;
+    margin: 0;
     padding-left: 2px;
     padding-right: 2px;
+    line-height: 1.5;
+    font-style: italic;
+    height: 12px;
+    z-index: 900;
+    font-size: 6pt;
+    font-weight: bolder;
+    font-family: Verdana, sans;
+    border: 1px solid #e3e3e3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
 .signin-link {
